<resources>
    <string name="app_name">Categories Infinity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login_screen">Sign in</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="search">Search</string>

    <string name="categories_infinity">Categories Infinity</string>
    <string name="how_to_play">How to Play!</string>

    <string name="activity">Activity</string>
    <string name="textview">TextView</string>

    <string name="progress">Progress</string>
    <string name="Profile">Profile</string>
    <string name="title_activity_profile">Profile</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="homebutton">HomeButton</string>
    <string name="multiautocompletetextview">MultiAutoCompleteTextView</string>
    <string name="login_failed" />
    <string name="todo">TODO</string>
    <string name="enter_a_username">Enter a Username</string>
    <string name="change_password">Change Password</string>
    <string name="title_activity_profile2">profile2</string>
    <string name="enter_username">Enter username</string>
    <string name="name">Name:</string>
    <string name="profileimage">profileImage</string>
    <string name="email">Email:</string>
    <string name="username">Username:</string>
    <string name="change">Change</string>
    <string name="UserName">/@UserName</string>
    <string name="profileim">ProfileIm</string>
    <string name="password">Password:</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="option_display">Option Display</string>
    <string name="play">Play</string>
    <string name="dislike">Dislike</string>
    <string name="like">Like</string>

</resources>
