<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E92E1"
    android:minWidth="20dp"
    android:visibility="visible"
    tools:context=".MainActivity">

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="17dp"
        android:background="#B4333232"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="147dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:background="#2E92E1"
        android:fontFamily="serif"
        android:shadowColor="#020101"
        android:text="@string/categories_infinity"
        android:textAllCaps="true"
        android:textColor="#040404"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/HomeButton"
        android:layout_width="60dp"
        android:layout_height="58dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="653dp"
        android:contentDescription="@string/homebutton"
        android:src="@drawable/ic_home_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755" />

    <TextView
        android:id="@+id/HomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginBottom="16dp"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/SearchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginBottom="12dp"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/HomeButton" />

    <TextView
        android:id="@+id/ProfileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="15dp"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="60dp"
        android:layout_height="58dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:contentDescription="@string/search"
        android:src="@android:drawable/ic_search_category_default"
        app:layout_constraintBottom_toTopOf="@+id/SearchText"
        app:layout_constraintEnd_toStartOf="@+id/profileButton"
        app:layout_constraintStart_toEndOf="@+id/HomeButton" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="60dp"
        android:layout_height="58dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:contentDescription="@string/profile"
        app:layout_constraintBottom_toTopOf="@+id/ProfileText"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@drawable/ic_launcher_foreground" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="368dp"
        android:background="#B4333232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/HowToPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="248dp"
        android:layout_marginRight="248dp"
        android:layout_marginBottom="376dp"
        android:text="@string/textview"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="How to Play!" />

    <TextView
        android:id="@+id/Activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="380dp"
        android:text="@string/activity"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

</androidx.constraintlayout.widget.ConstraintLayout>